--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="/Users/rafaelsanchez/android-sdks/extras/android/support/v7/recyclerview/libs/android-support-v7-recyclerview.jar"/>
-	<classpathentry kind="lib" path="/Users/rafaelsanchez/android-sdks/extras/android/support/v4/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/rafaelsanchez/android-sdks/extras/android/support/v4/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/rafaelsanchez/android-sdks/extras/android/support/v7/cardview/libs/android-support-v7-cardview.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/rafaelsanchez/libs/picasso-2.4.0.jar"/>
 	<classpathentry kind="src" path="src"/>
